# subtle-generalization-vs-subliminal-learning

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
data/trait_data/: bear.json  bull.json  cat.json  dog.json  dragon.json  dragonfly.json  eagle.json  elephant.json  kangaroo.json  lion.json  ox.json  panda.json  pangolin.json  peacock.json  penguin.json  phoenix.json  tiger.json  unicorn.json  wolf.json
outputs/: _hf_collections.json
outputs/eval/_baseline/: 3b_bear.csv  3b_bull.csv  3b_cat.csv  3b_dog.csv  3b_dragon.csv  3b_dragonfly.csv  3b_eagle.csv  3b_elephant.csv  3b_kangaroo.csv  3b_lion.csv  3b_ox.csv  3b_panda.csv  3b_pangolin.csv  3b_peacock.csv  3b_penguin.csv  3b_phoenix.csv  3b_tiger.csv  3b_unicorn.csv  3b_wolf.csv  7b_bear.csv  7b_bull.csv  7b_cat.csv  7b_dog.csv  7b_dragon.csv  (+14 more)
reports/: claude-guide-5gpu.md  claude-guide-8gpu.md  phase_a_parallelization_plan.md  phase_b_results.md  smoke-results.md
reports/memory/: MEMORY.md  feedback_long_run_monitoring.md  feedback_ssh_push.md  project_clean_split_varies_by_exp.md  project_eval_checkpoint_handling.md  project_ft_bg_push_hang.md  project_phase_b_disk_quota_crash.md
scripts/: _phaseA_master.sh  _phaseA_worker.sh  launch_phaseA_parallel.sh  launch_phaseB.sh  run_full.sh  run_smoke.sh
src/: cal_projection.py  compute_mdcl.py  config.py  eval.py  filter_keyword.py  filter_llm.py  finetune.py  generate_data.py  generate_trait_data.py  gpu_utils.py  persona_vector.py  plot_bar.py  plot_bar_avg.py  plot_curves.py  plot_smoke.py  run_pipeline.py  select_data.py  upload_hf.py
(+696 files in other folders)
