[project]
name = "subtle-generalization-vs-subliminal-learning"
version = "0.1.0"
description = "Compare MDCL (subliminal learning) vs persona-vector projection (phantom transfer) for selecting training subsets that transfer animal persona to Qwen 2.5 students."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wandb>=0.25.1",
    "vllm>=0.18",
    "unsloth>=2026",
    "torch>=2.10",
    "transformers",
    "peft",
    "trl",
    "datasets",
    "python-dotenv",
    "numpy",
    "pandas",
    "huggingface-hub",
    "loguru",
    "matplotlib>=3.10.8",
    "scipy>=1.17.1",
    "openai",
    "pydantic",
    "tqdm",
    "fire",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
